--- a/oabutton/apps/web/templates/web/index.jade
+++ b/oabutton/apps/web/templates/web/index.jade
@@ -97,7 +97,7 @@ block body
                                         p
             .row
                 .col-md-12
-                    h3 And many thanks to those who helped along the way
+                    h3 Many thanks to those who helped along the way
                         ul
                             li
                                 a(href="http://opensciencefederation.com/") 
