--- a/oabutton/static/public/less/app.less
+++ b/oabutton/static/public/less/app.less
@@ -163,11 +163,13 @@ header {
     font-size: 20px;
     padding: 4px 10px;
     margin: 0 20px;
-
-    .bug {}
   }
 }
 
 .contribute {
   background: #fff;
+}
+
+.team ul {
+  text-align: left;
 }
