Open "What's a DOI" link in new tab

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/success.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/success.html
@@ -4,7 +4,7 @@
 <ul id="oa_links">
 </ul>
 <div>
-<a href="http://en.wikipedia.org/wiki/Digital_object_identifier">What's a DOI?</a>
+<a href="http://en.wikipedia.org/wiki/Digital_object_identifier" target="_blank">What's a DOI?</a>
 </div>
 {% endblock %}
 {% block scripts %}
