--- a/oabutton/static/public/less/app.less
+++ b/oabutton/static/public/less/app.less
@@ -1,7 +1,20 @@
-/* Shared styles */
+/* Swatches */
 
 @oayellow: #ffc425;
 @oaorange: #ef5b23;
+@oapurple: #7d355a;
+@oagreen1: #014d42;
+@oagreen2: #008471;
+@oagreen3: #37bba4;
+@oagreen4: #70c8bc;
+@oagreys1: #d6d3e2;
+@oagreys2: #a5bfba;
+
+/* Global styles */
+
+body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+  font-family: "Raleway", "Helvetica Neue", Helvetica,Arial,sans-serif;
+}
 
 /* Navigation and header area */
 
@@ -98,9 +111,10 @@ header {
     .lead {
       background: #fff;
       text-align: center;
+      margin-bottom: 10px;
     }
 
-    p { padding: 0 1em; }
+    p { padding: 0 1em; font-size: 110%; }
   }
 }
 
