--- a/oabutton/apps/web/templates/web/index.jade
+++ b/oabutton/apps/web/templates/web/index.jade
@@ -1,5 +1,7 @@
 extends web/layout
 block body
+    a(name='top')
+    
     // Github ribbon
     a(href='https://github.com/OAButton/OAButton')
         img#github_ribbon(
@@ -30,11 +32,24 @@ block body
     header.jumbotron.subhead
         .container
             h1 Need Access to Research?
-            h2 Sign up to get the Open Access Button
-            iframe(width="462", height="260", src="//www.youtube.com/embed/Z93Yq0_DP7I", frameborder="0", allowfullscreen)
+            h2 Sign up below to get your Open Access Button
+        a(href="#top", data-toggle="modal", data-target="#video-modal", alt="Need access to research?", title="Learn more about the project in this video")
+            | Learn more about the project in this video
         .lead 
             span 
                 | Tearing down barriers to accessing research, one click at a time
+
+    .modal.fade(id="video-modal", tabindex="-1", role="dialog", aria-labelledby="video-header", aria-hidden="true")
+        .modal-dialog
+            .modal-content
+                .modal-header
+                    button.close(type="button", data-dismiss="modal", aria-hidden="true") &times;
+                    h4.modal-title(id="video-header") 
+                        | Introduction video
+                .modal-body
+                    iframe(width="538", height="303", src="//www.youtube.com/embed/Z93Yq0_DP7I", frameborder="0", allowfullscreen)
+                .modal-footer
+                    button.btn.btn-default(type="button", data-dismiss="modal") Close
 
     .start
         a(name='start')
@@ -161,48 +176,3 @@ block body
                     p
                         | All site content is licensed under a
                         | Creative Commons Attribution License.
-
-    // Old body
-        .row
-            .col-lg-4     
-                section#start
-                    .hero-unit
-                        p.
-                            If we want to bring about a more open community we’ll need more tools,
-                            more information and more engagement around the issue.
-
-                        p
-                            strong That’s where our idea comes in. 
-                            |Imagine a browser-based tool that allows you to track every time someone
-                            |is denied access to a paper? Better yet, imagine if that tool gave you
-                            |basic information about where in the world they were or their profession
-                            |and why they were looking. Integrating this into one place would create a
-                            |realtime, worldwide, interactive picture of the problem. The integration
-                            |of social media would allow us to make this problem visible to the world.
-                            |Lastly, imagine if the tool actually helped the person gain access to the
-                            |paper they’d been denied access to in the first place. Incentivising use
-                            |and opening the barriers to knowledge combined can make this really
-                            |powerful.
-
-                        p
-                            |That’s what we’re imagining. We’re calling it the 
-                            strong Open Access button
-                            |. Every paywall met is an isolated incident; it’s time we capture those
-                            |individual moments of injustice and frustration to turn them into positive
-                            |change.
-
-                section#contribute
-                    .page-header
-                        h1 How can I help?
-                    .hero-unit
-                        p.
-                            We’re glad you asked! The Open Access Button has been created entirely by
-                            volunteers, and we can always do with some extra help squashing bugs and
-                            adding new features.
-
-                        p
-                            |If you want to help out, 
-                            a(href='http://github.com/OAButton/OAButton') check out the source on Github
-                            |, and get hacking. There are some instructions there on 
-                            a(href='https://github.com/OAButton/OAButton/blob/develop/instructions.md') how to set up your development server
-                            |.
