--- a/oabutton/static/public/less/app.less
+++ b/oabutton/static/public/less/app.less
@@ -29,13 +29,16 @@ header {
   margin-top:2em;
   background:url(http://farm7.staticflickr.com/6039/6303965123_ee370be50a_b.jpg) no-repeat;
   background-size:100% auto;
+  text-align: center;
 
-  .container {
-    background:url(../img/header_needaccess.png) no-repeat bottom left;
-    background-size:auto 50%;
-    width:100%; height:13em;
-    
-    * { display:none; }
+  .container { display:none; }
+
+  a {
+    display: block;
+    width:100%; height:225px; max-width: 960px;
+    font-size: 0px; text-indent: -9999px;
+    background:url(../img/header_wide.png) no-repeat bottom center;
+    background-size:80%;
   }
 
   .lead {
@@ -61,6 +64,12 @@ header {
   right: 0;
   border: 0;
   z-index: 1;
+}
+
+#video-header {
+  background: url(../img/video.png) no-repeat left center;
+  background-size: 1em;
+  padding-left: 1.5em;
 }
 
 /* Bookmarklet popup */
@@ -188,4 +197,11 @@ header {
 
 .team ul {
   text-align: left;
+}
+
+/* Responsive styles */
+
+@media screen and (max-width: 768px) {
+
+  header a { background-size:100%; }
 }
