--- a/oabutton/apps/web/templates/web/index.jade
+++ b/oabutton/apps/web/templates/web/index.jade
@@ -117,45 +117,47 @@ block body
                                     .links
                                         if person.twitter
                                             a.twitter(href="http://twitter.com/#{person['twitter']}", target="_blank") Twitter
+    .thanks
+        a(name='thanks')
+        .container
             .row
                 .col-md-12
-                    h3 Many thanks to those who helped along the way
-                        ul
-                            li
-                                a(href="http://opensciencefederation.com/") 
-                                    | Open Science Federation
-                            li
-                                a(href="http://originalcontentlondon.com/")
-                                    | Original Content London
-                            li
-                                a(href="https://twitter.com/McDawg")
-                                     | Graham Steel
-                            li
-                                a(href="http://okfn.org/")
-                                    | Open Knowledge Foundation
-                            li
-                                a(href="http://rewiredstate.org/")
-                                    | Rewired State
-                            li
-                                a(href="http://www.bmj.com/")
-                                    | BMJ
-                            li
-                                a(href="http://www.plos.org/")
-                                    | PLoS
-                            li
-                                a(href="https://twitter.com/Protohedgehog")
-                                    | Jon Tennant
-                            li
-                                a(href="https://twitter.com/petermurrayrust")
-                                    | Peter Murray-Rust 
-                            li
-                                a(href="http://sparc.arl.org/")
-                                    | SPARC
-                            li
-                                a(href="https://twitter.com/CameronNeylon")
-                                    | Cameron Neylon
-                            li
-                                | Everyone who joined the thunderclap or contacted us with messages of support or suggestions!
+                    h3 Many thanks to all who helped along the way
+                    ul
+                        li
+                            a(href="http://opensciencefederation.com/") 
+                                | Open Science Federation
+                        li
+                            a(href="http://originalcontentlondon.com/")
+                                | Original Content London
+                        li
+                            a(href="https://twitter.com/McDawg")
+                                 | Graham Steel
+                        li
+                            a(href="http://okfn.org/")
+                                | Open Knowledge Foundation
+                        li
+                            a(href="http://rewiredstate.org/")
+                                | Rewired State
+                        li
+                            a(href="http://www.bmj.com/")
+                                | BMJ
+                        li
+                            a(href="http://www.plos.org/")
+                                | PLoS
+                        li
+                            a(href="https://twitter.com/Protohedgehog")
+                                | Jon Tennant
+                        li
+                            a(href="https://twitter.com/petermurrayrust")
+                                | Peter Murray-Rust 
+                        li
+                            a(href="http://sparc.arl.org/")
+                                | SPARC
+                        li
+                            a(href="https://twitter.com/CameronNeylon")
+                                | Cameron Neylon
+                        p + Everyone who joined the thunderclap or contacted us with messages of support or suggestions!
 
 
     #footer
