--- a/oabutton/apps/web/templates/web/index.jade
+++ b/oabutton/apps/web/templates/web/index.jade
@@ -1,6 +1,7 @@
 extends web/layout
 block body
-    a(name='top')
+    #top
+        a(name='top')
     
     // Github ribbon
     a(href='https://github.com/OAButton/OAButton')
@@ -18,10 +19,10 @@ block body
                 a.navbar-brand(href='#') Open Access Button
             .navbar-collapse.collapse
                 ul.nav.navbar-nav
-                    li.active
-                        a(href='#start') Get the button
                     li
-                        a(href='#map') See the map
+                        a(href='#top') Get the button
+                    li
+                        a(href='#world') See the map
                     li
                         a(href='#contribute') Contribute
                     li
@@ -33,7 +34,7 @@ block body
         .container
             h1 Need Access to Research?
             h2 Sign up below to get your Open Access Button
-        a(href="#top", data-toggle="modal", data-target="#video-modal", alt="Need access to research?", title="Learn more about the project in this video")
+        a(href="#start", data-toggle="modal", data-target="#video-modal", alt="Need access to research?", title="Learn more about the project in this video")
             | Learn more about the project in this video
         .lead 
             span 
@@ -51,13 +52,12 @@ block body
                 .modal-footer
                     button.btn.btn-default(type="button", data-dismiss="modal") Close
 
-    .start
-        a(name='start')
+    #start
         .container.center
             block start
     
-    .map
-        a(name='map')
+    #world
+        a(name='world')
         .container
             #map
                 .underlay
@@ -69,7 +69,7 @@ block body
                     p
                         | This map displays people being denied access to the research they both need and paid for. Put yourself on the map using the Open Access Button to tell the world you are being denied access to knowledge. Using the Open Access Button will make the individual moments of injustice and frustration visible to the world.
 
-    .intro
+    #intro
         a(name='intro')
         .container
             h2 What is this about?
@@ -79,7 +79,7 @@ block body
                         | People are denied access to research hidden behind paywalls every day. This problem is invisible, but it slows innovation, kills curiosity and harms patients. This is an indictment of the current system. Open Access has given us the solution to this problem by allowing everyone to read and re-use research. 
                         | We created the Open Access Button to track the impact of paywalls and help you get access to the research you need. By using the Open Access Button you’ll help show the impact of this problem, drive awareness of the issue, and help change the system. As if this wasn’t enough, the Open Access Button has several ways of helping you get access to the research you need right now. 
 
-    .contribute
+    #contribute
         a(name='contribute')
         .container
             h2 Get involved.
@@ -90,14 +90,14 @@ block body
 
             .row.buttons
                 .col-md-12
-                    button.btn.btn-default.bug(type="button")
+                    a.btn.btn-default.bug(type="button", href="mailto:oabutton+bug@gmail.com")
                         | Report a bug
-                    button.btn.btn-warning.donate(type="button") 
+                    button.btn.btn-warning.donate(type="button", target="_blank", href="https://www.charitycheckout.co.uk/1111824/OpenAccessButton") 
                         | Donate!
-                    button.btn.btn-success.suggest(type="button")
+                    button.btn.btn-success.suggest(type="button", href="mailto:oabutton+suggestion@gmail.com")
                         | Suggestions
 
-    .team
+    #team
         a(name='team')
         .container
             .row
@@ -117,7 +117,7 @@ block body
                                     .links
                                         if person.twitter
                                             a.twitter(href="http://twitter.com/#{person['twitter']}", target="_blank") Twitter
-    .thanks
+    #thanks
         a(name='thanks')
         .container
             .row
@@ -160,26 +160,43 @@ block body
                         p + Everyone who joined the thunderclap or contacted us with messages of support or suggestions!
 
 
-    #footer
+    #contact
         a(name='contact')
         .container
             .row
                 .col-md-4
-                    INFO
-                .col-md-4
-                    ABOUT
-                .col-md-4
-                    [t] [f] [r]
-            .row
-                .col-md-4
-                    p Terms of use
-                    p Support community
-                    p Collaborator login
-                .col-md-4
-                    p Project blog
-                    p Get the data
-                    p Contacts
+                    p
+                        b INFO
+                    p
+                        a(href="http://blog.openaccessbutton.org")
+                            | Project blog
+                    p
+                        a(href="https://groups.google.com/d/forum/open-access-button-general")
+                            | Join the community
+                    p Disclaimer
                 .col-md-4
                     p
-                        | All site content is licensed under a
-                        | Creative Commons Attribution License.
+                        b ABOUT
+                    p
+                        a(href="mailto:oabutton+press@medsin.org")
+                            | Media inquiries
+                    p
+                        a(href="https://github.com/oabutton")
+                            | Get the code
+                    p
+                        a(href="oabutton+data@gmail.com")
+                            | Get the data
+                .col-md-4
+                    p
+                        a.icon.twitter(href="https://twitter.com/oa_button") Twitter
+                        a.icon.facebook(href="https://www.facebook.com/openaccess.net") Facebook
+                        a.icon.wordpress(href="http://oabutton.wordpress.com/") Wordpress
+
+                    p
+                        a(rel="license", href="http://creativecommons.org/licenses/by/3.0/")
+                            img(alt="Creative Commons License", style="border-width:0", src="http://i.creativecommons.org/l/by/3.0/88x31.png")
+                        | &nbsp;The 
+                        span(xmlns:dct="http://purl.org/dc/terms/", property="dct:title") Open Access Button 
+                        | is licensed under a 
+                        a(rel="license", href="http://creativecommons.org/licenses/by/3.0/") Creative Commons Attribution 3.0 Unported License
+                        |.
